# google-cloud-rust-pubsub-sample

./: README.md  docker-compose.yml
publish/: Cargo.toml
publish/src/: main.rs
python-subscriber/: README.md  pyproject.toml
python-subscriber/src/python_subscriber/: __init__.py  main.py
scripts/: add_credential_to_dot_env.py
secret/: .env.example
subscriber/: Cargo.toml
subscriber/src/: main.rs
