[package]
name = "publish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-pubsub = "0.23.0"
tokio = {version = "1.32", features = ["rt-multi-thread"]}
tokio-util = "0.7"
google-cloud-googleapis = "0.12.0"
google-cloud-gax = "0.17.0"
